--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,81 @@
-Django==5.2.8
-Pillow==12.0.0
-
-
+altair==5.5.0
+annotated-types==0.7.0
+asgiref==3.9.1
+attrs==25.4.0
+blinker==1.9.0
+blis==1.3.0
+cachetools==6.2.1
+catalogue==2.0.10
+certifi==2025.10.5
+cffi==2.0.0
+chardet==5.2.0
+charset-normalizer==3.4.4
+click==8.3.0
+cloudpathlib==0.23.0
+confection==0.1.5
+cryptography==46.0.3
+cymem==2.0.11
+Django==5.2.5
+docx2txt==0.9
+gitdb==4.0.12
+GitPython==3.1.45
+idna==3.11
+Jinja2==3.1.6
+joblib==1.5.2
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+MarkupSafe==3.0.3
+murmurhash==1.0.13
+narwhals==2.11.0
+nltk==3.9.2
+numpy==2.3.4
+packaging==25.0
+pafy==0.5.5
+pandas==2.3.3
+pdfminer.six==20251107
+pdfminer3==2018.12.3.0
+pillow==12.0.0
+plotly==6.4.0
+preshed==3.0.10
+protobuf==6.33.0
+pyarrow==21.0.0
+pycparser==2.23
+pycryptodome==3.23.0
+pydantic==2.12.4
+pydantic_core==2.41.5
+pydeck==0.9.1
+PyMySQL==1.1.2
+pyresparser==1.0.6
+pyrsistent==0.20.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
+referencing==0.37.0
+regex==2025.11.3
+reportlab==4.4.4
+requests==2.32.5
+rpds-py==0.28.0
+setuptools==80.9.0
+six==1.17.0
+smart_open==7.5.0
+smmap==5.0.2
+sortedcontainers==2.4.0
+spacy==3.8.8
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+sqlparse==0.5.3
+srsly==2.5.1
+streamlit==1.51.0
+streamlit-tags==1.2.8
+tenacity==9.1.2
+thinc==8.3.8
+toml==0.10.2
+tornado==6.5.2
+tqdm==4.67.1
+typer-slim==0.20.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+wasabi==1.1.3
+weasel==0.4.2
+wrapt==2.0.1
