--- a/requirements.txt
+++ b/requirements.txt
@@ -79,5 +79,7 @@ urllib3==2.5.0
 wasabi==1.1.3
 weasel==0.4.2
 wrapt==2.0.1
-psycopg2-binary
+gunicorn
+whitenoise
 dj-database-url
+psycopg2-binary
