--- a/requirements.txt
+++ b/requirements.txt
@@ -15,10 +15,12 @@ cloudpathlib==0.23.0
 confection==0.1.5
 cryptography==46.0.3
 cymem==2.0.11
+dj-database-url==3.0.1
 Django==5.2.5
 docx2txt==0.9
 gitdb==4.0.12
 GitPython==3.1.45
+gunicorn==23.0.0
 idna==3.11
 Jinja2==3.1.6
 joblib==1.5.2
@@ -38,6 +40,7 @@ pillow==12.0.0
 plotly==6.4.0
 preshed==3.0.10
 protobuf==6.33.0
+psycopg2-binary==2.9.11
 pyarrow==21.0.0
 pycparser==2.23
 pycryptodome==3.23.0
@@ -78,8 +81,5 @@ tzdata==2025.2
 urllib3==2.5.0
 wasabi==1.1.3
 weasel==0.4.2
+whitenoise==6.11.0
 wrapt==2.0.1
-gunicorn
-whitenoise
-dj-database-url
-psycopg2-binary
